Fix story alignment, remove extra padding

--- a/src/scss/_header-compact.scss
+++ b/src/scss/_header-compact.scss
@@ -49,7 +49,7 @@ The default styles for the collapsed version of the compact header.
   /* PU Branding */
   .jazz-header-compact__pu-branding {
     @include jazz-theme-color(header-pu-branding);
-    padding: px-to-rem(30) 0px px-to-rem(10) px-to-rem(10);
+    padding: px-to-rem(20) 0px px-to-rem(10) px-to-rem(10);
   }
   .jazz-header-compact__pu-branding img {
     width: px-to-rem(144);
@@ -67,7 +67,7 @@ The default styles for the collapsed version of the compact header.
   }
 
   .jazz-header-compact__site-branding {
-    padding-top: px-to-rem(40);
+    padding-top: px-to-rem(30);
   }
 
   .jazz-header-compact__site-branding-name a,
@@ -104,7 +104,7 @@ The default styles for the collapsed version of the compact header.
 
   .jazz-header-compact__site-branding--divider {
     margin-right: px-to-rem(20);
-    margin-top: px-to-rem(40);
+    margin-top: px-to-rem(30);
   }
   .jazz-menu__main-menu {
     display: flex;
@@ -140,11 +140,11 @@ The default styles for the collapsed version of the compact header.
     display: inline-block;
     width: 100%;
     text-align: center;
-    margin-top: px-to-rem(20);
+    //margin-top: px-to-rem(20);
 
     border-bottom: none;
     padding: px-to-rem(40) 0px 0px 0px;
-    margin-right: px-to-rem(20);
+    //margin-right: px-to-rem(20);
     display: block;
   }
   .jazz-header-compact__utility-menu a:hover {
@@ -153,7 +153,7 @@ The default styles for the collapsed version of the compact header.
   .jazz-header-compact__utility-menu--divider {
     position: static;
     width: px-to-rem(2);
-    height: px-to-rem(20);
+    height: px-to-rem(39);
     left: 0px;
     top: px-to-rem(20);
     background: jazz-theme-rgb(header-utility-menu-divider);
@@ -161,6 +161,6 @@ The default styles for the collapsed version of the compact header.
     flex: none;
     order: 0;
     flex-grow: 0;
-    margin: px-to-rem(50) px-to-rem(20) px-to-rem(30) 0;
+    margin: px-to-rem(30) 0 px-to-rem(30) 0;
   }
 }
